Fix wrong border radius clip paint property hierarchy

Bug: 793272
Change-Id: I2188e0fd6544584440e6b93a13de3334e2f44674